<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PrivateProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <!--<TextView-->
        <!--android:text="My private profile info"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/textView2" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36dp"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/privatProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_default_profile_pic"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <ImageView
                    android:id="@+id/editLogo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile_username_label"
                    android:id="@+id/username_label"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="username"
                    android:id="@+id/usernameText"
                    android:layout_alignBottom="@+id/username_label"
                    android:layout_toRightOf="@+id/username_label"
                    android:layout_toEndOf="@+id/username_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile_pw_label"
                    android:id="@+id/pw_label"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="password"
                    android:password="true"
                    android:id="@+id/pwText"
                    android:layout_alignBottom="@+id/pw_label"
                    android:layout_toRightOf="@+id/pw_label"
                    android:layout_toEndOf="@+id/pw_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile_licenesID_label"
                    android:id="@+id/licenseID_label"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="licenseID"
                    android:id="@+id/licenseIDText"
                    android:layout_alignBottom="@+id/licenseID_label"
                    android:layout_toRightOf="@+id/licenseID_label"
                    android:layout_toEndOf="@+id/licenseID_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile_licenesPlate_label"
                    android:id="@+id/licensePlate_label"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="license plate num"
                    android:id="@+id/licenseplateText"
                    android:layout_alignBottom="@+id/licensePlate_label"
                    android:layout_toRightOf="@+id/licensePlate_label"
                    android:layout_toEndOf="@+id/licensePlate_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_label"
                    android:id="@+id/phoneText_label"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone num"
                    android:id="@+id/phoneText"
                    android:layout_alignBottom="@+id/licensePlate_label"
                    android:layout_toRightOf="@+id/licensePlate_label"
                    android:layout_toEndOf="@+id/licensePlate_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
